-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 25
-
Component/s: hotspot
-
b17
-
ppc
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8362478 | 21.0.9 | Richard Reingruber | P4 | Resolved | Fixed | b01 |
| JDK-8369088 | 17.0.18 | Richard Reingruber | P4 | Resolved | Fixed | b01 |
/build/reproducible-path/openjdk-25-25~15ea/src/hotspot/os_cpu/linux_ppc/javaThread_linux_ppc.cpp: In member function ‘bool JavaThread::pd_get_top_frame_for_profiling(frame*, void*, bool)’:
/build/reproducible-path/openjdk-25-25~15ea/src/hotspot/os_cpu/linux_ppc/javaThread_linux_ppc.cpp:51:37: error: incomplete type ‘os::Linux’ used in nested name specifier
51 | intptr_t* top_sp = os::Linux::ucontext_get_sp((const ucontext_t*)ucontext);
| ^~~~~~~~~~~~~~~
See https://buildd.debian.org/status/fetch.php?pkg=openjdk-25&arch=ppc64&ver=25%7E15ea-1&stamp=1742768056&raw=0
- backported by
-
JDK-8362478 [PPC] OpenJDK fails to build on PPC after JDK-8350106
-
- Resolved
-
-
JDK-8369088 [PPC] OpenJDK fails to build on PPC after JDK-8350106
-
- Resolved
-
- caused by
-
JDK-8350106 [PPC] Avoid ticks_unknown_not_Java AsyncGetCallTrace() if JavaFrameAnchor::_last_Java_pc not set
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/1d96b820
-
Commit(master)
openjdk/jdk21u-dev/72bcd824
-
Commit(master)
openjdk/jdk/9a87e213
-
Review(master)
openjdk/jdk17u-dev/3949
-
Review(master)
openjdk/jdk21u-dev/1972
-
Review(master)
openjdk/jdk/24216