8352800: [PPC] OpenJDK fails to build on PPC after JDK-8350106