src/hotspot/os_cpu/linux_ppc/javaThread_linux_ppc.cpp
@@ -24,6 +24,7 @@
  */
 
 #include "memory/metaspace.hpp"
+#include "os_linux_ppc.inline.hpp"
 #include "runtime/frame.inline.hpp"
 #include "runtime/javaThread.hpp"
 
