src/hotspot/os_cpu/linux_ppc/thread_linux_ppc.cpp
@@ -26,6 +26,7 @@
 #include "precompiled.hpp"
 #include "memory/metaspace.hpp"
 #include "runtime/frame.inline.hpp"
+#include "runtime/os.hpp"
 #include "runtime/thread.hpp"
 
 frame JavaThread::pd_last_frame() {
